# eda

./: CMakeLists.txt  constantes.h  ficheiros.cpp  ficheiros.h  funcionamento.cpp  funcionamento.h  listaDeChegada.cpp  listaDeChegada.h  main.cpp  pecas.cpp  pecas.h  seccao.cpp  seccao.h  struct.h
